# patzer

./: .gitignore  Cargo.toml  NOTES.md  README.md  bacon.toml
.github/workflows/: rust.yml
src/: app_state.rs  board.rs  game_state.rs  lib.rs  main.rs  player.rs  theme.rs  uci.rs  ui_state.rs
src/evaluation/: material.rs  mod.rs  types.rs
src/prompt/: mod.rs
src/strategies/: alphabeta.rs  hope.rs  mod.rs
src/transposition/: mod.rs
src/widget/: mod.rs
src/windows/: mod.rs
