[package]
name = "patzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3

[dependencies]

# i don't want to reinvent move generation right now kthx
chess = "3.2.0"

# non-determinism makes things interesting
rand = "0.8.5"

# an immediate mode gui library
eframe = "0.19.0"
egui_extras = "0.19.0"
